# stm32g4xx-hal

./: .gitignore  Cargo.toml
examples/: blinky.rs  blinky_delay.rs  counter.rs  pwm.rs
src/: gpio.rs  lib.rs
src/rcc/: clockout.rs  mod.rs
src/timer/: counter.rs  mod.rs  pwm.rs
