[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G4 series microcontrollers"
documentation = "https://docs.rs/stm32g4xx-hal"
edition = "2021"
keywords = ["arm", "cortex-m", "stm32g4xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32g4xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32g4xx-hal"
version = "0.0.0"

[dependencies]
cortex-m = "0.7.1"
nb = "0.1.1"
stm32g4 = "0.14.0"
paste = "1.0"
bitflags = "1.2"
vcell = "0.1"
static_assertions = "1.1"

[dependencies.cast]
version = "0.2.7"
default-features = false

[dependencies.bare-metal]
features = ["const-fn"]
version = "0.2.5"

[dependencies.embedded-hal]
version = "1.0.0-alpha.8"

[dependencies.embedded-dma]
version = "0.1.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.defmt]
version = "0.3.0"
optional = true

[dev-dependencies]
cortex-m-rt = "0.7"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
panic-halt = "0.2"
defmt = "0.3"
defmt-rtt = "0.3"

[features]
device-selected = []
doc = []
rt = ["stm32g4/rt"]
stm32g431 = ["stm32g4/stm32g431", "device-selected"]
stm32g441 = ["stm32g4/stm32g441", "device-selected"]
stm32g471 = ["stm32g4/stm32g471", "device-selected"]
stm32g473 = ["stm32g4/stm32g473", "device-selected"]
stm32g474 = ["stm32g4/stm32g474", "device-selected"]
stm32g483 = ["stm32g4/stm32g483", "device-selected"]
stm32g484 = ["stm32g4/stm32g484", "device-selected"]
stm32g491 = ["stm32g4/stm32g491", "device-selected"]
stm32g4a1 = ["stm32g4/stm32g4a1", "device-selected"]


[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true