[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G4 series microcontrollers"
documentation = "https://docs.rs/stm32g4xx-hal"
edition = "2021"
keywords = ["arm", "cortex-m", "stm32g4xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32g4xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32g4xx-hal"
version = "0.0.0"

[dependencies]
stm32g4 = "0.14.0"
embedded-hal = "1.0.0-alpha.8"
#cortex-m = "0.7.1"
#nb = "0.1.1"
#paste = "1.0"
#bitflags = "1.2"
#vcell = "0.1"
#static_assertions = "1.1"
#cast = { version = "0.3" , default-features = false}
#bare-metal = { version = "0.2", features = ["const-fn"] }
#embedded-dma = "0.2"
#
#
#[dependencies.defmt]
#version = "0.3.0"
#optional = true

[dev-dependencies]
panic-halt = "0.2"
cortex-m-rt = "0.7"
#lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
#panic-halt = "0.2"
#defmt = "0.3"
#defmt-rtt = "0.3"

[features]
device-selected = []
package-selected = []
doc = []
rt = ["stm32g4/rt"]
stm32g431 = ["stm32g4/stm32g431", "device-selected"]
stm32g441 = ["stm32g4/stm32g441", "device-selected"]
stm32g471 = ["stm32g4/stm32g471", "device-selected"]
stm32g473 = ["stm32g4/stm32g473", "device-selected"]
stm32g474 = ["stm32g4/stm32g474", "device-selected"]
stm32g483 = ["stm32g4/stm32g483", "device-selected"]
stm32g484 = ["stm32g4/stm32g484", "device-selected"]
stm32g491 = ["stm32g4/stm32g491", "device-selected"]
stm32g4a1 = ["stm32g4/stm32g4a1", "device-selected"]
ufqfpn32 = ["package-selected"]
lqfp32   = ["package-selected"]
ufqfpn48 = ["package-selected"]
lqfp48   = ["package-selected"]
wlcsp49  = ["package-selected"]
lqfp64   = ["package-selected"]
ufbga64  = ["package-selected"]
lqfp80   = ["package-selected"]
lqfp100  = ["package-selected"]


#[profile.dev]
#incremental = false
#codegen-units = 1

#[profile.release]
#codegen-units = 1
#debug = true
#lto = true
